--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Document</title>
 </head>
 
 <body>
     <header class="header">
-
         <div class="hamburger-menu">
             <button class="hamburger-btn" onclick="toggleMenu()">☰</button>
             <ul class="menu-items">
@@ -25,21 +24,16 @@
                 <li><a href="#3">تنظیمات</a></li>
                 <li><a href="#4">درباره ما</a></li>
             </ul>
-            <div class="title">
-                مدرسه موش ها
-            </div>
+            <div class="title">مدرسه موش ها</div>
         </div>
 
         <div class="search-bar">
-            <input type="text" image="search-icon.png" placeholder="جستجو...">
-            <button class="search-icon">
-                🔍
-            </button>
+            <input type="text" image="search-icon.png" placeholder="جستجو..." />
+            <button class="search-icon">🔍</button>
         </div>
         <nav class="nav-bar">
             <a href="#1" class="nav-item1">پنل</a>
-            |<a href="#2" class="nav-item2">عضویت</a>
-            |<a href="#3" class="nav-item3">...</a>
+            |<a href="#2" class="nav-item2">عضویت</a> |<a href="#3" class="nav-item3">...</a>
         </nav>
     </header>
     <div class="circle-menu">
@@ -51,6 +45,23 @@
             <div class="orbit-item" onclick="selectItem(this)">تقسیم</div>
         </div>
     </div>
+    <div class="graph">
+        <svg width="200" height="400">
+            <path d="M0,0 A75,75 0 0,1 200,350" stroke="black" fill="none" id="center1" />
+            <path d="M200,200 A75,75 0 0,1 200,350, A75,75 0 0, 0, 200,500 " stroke="black" fill="none" id="curve" />
+        </svg>
+        <div class="item">جمع</div>
+        <div class="item">تفریق</div>
+        <div class="item">ضرب</div>
+        <div class="item">تقسیم</div>
+        <div class="item">جمع</div>
+        <div class="item">تفریق</div>
+        <div class="item">ضرب</div>
+        <div class="item">تقسیم</div>
+        <!-- <div class="item">جدول</div> -->
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 
