--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             |<a href="#2" class="nav-item2">عضویت</a> |<a href="#3" class="nav-item3">...</a>
         </nav>
     </header>
+    <!-- <svg width="100" height="150" viewbox="100 100 100 150"  style="border: 1px solid black;" id="curve2" >
+        <path d="m100,100 a75,75 0 0,1 0,150, a75,75 0 0, 0, 0,150 " stroke="blue" fill="none" />
+    </svg> -->
     <div class="circle-menu">
         <div class="center-circle">ریاضی</div>
         <div class="orbit">
@@ -46,9 +49,8 @@
         </div>
     </div>
     <div class="graph">
-        <svg width="200" height="400">
-            <path d="M0,0 A75,75 0 0,1 200,350" stroke="black" fill="none" id="center1" />
-            <path d="M200,200 A75,75 0 0,1 200,350, A75,75 0 0, 0, 200,500 " stroke="black" fill="none" id="curve" />
+        <svg width="200" height="400" viewbox="000 0 200 400" id="gr">
+            <path d="m100,0 a75,75 0 0,1 0,150, a75,75 0 0, 0, 0,150 " stroke="red" fill="none" id="curve" />
         </svg>
         <div class="item">جمع</div>
         <div class="item">تفریق</div>
@@ -57,8 +59,21 @@
         <div class="item">جمع</div>
         <div class="item">تفریق</div>
         <div class="item">ضرب</div>
-        <div class="item">تقسیم</div>
-        <!-- <div class="item">جدول</div> -->
+       <div class="item">تقسیم</div>
+        
+    </div>
+    <div class="graph1">
+        <svg width="200" height="400" viewbox="000 0 200 400"  id="gr1">
+            <path d="m200,0 a75,75 0 0,1 0,150, a75,75 0 0, 0, 0,150 " stroke="blue" fill="none" id="curve1" />
+        </svg>
+        <div class="item1">جمع</div>
+        <div class="item1">تفریق</div>
+        <div class="item1">ضرب</div>
+        <div class="item1">تقسیم</div>
+        <div class="item1">جمع</div>
+        <div class="item1">تفریق</div>
+        <div class="item1">ضرب</div>
+        <div class="item1">تقسیم</div>
     </div>
 
 
