--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- <svg width="100" height="150" viewbox="100 100 100 150"  style="border: 1px solid black;" id="curve2" >
         <path d="m100,100 a75,75 0 0,1 0,150, a75,75 0 0, 0, 0,150 " stroke="blue" fill="none" />
     </svg> -->
-    <div class="circle-menu">
+    <!-- <div class="circle-menu">
         <div class="center-circle">ریاضی</div>
         <div class="orbit">
             <button class="orbit-item" onclick="selectItem(this)">جمع</button>
@@ -47,7 +47,7 @@
             <div class="orbit-item" onclick="selectItem(this)">ضرب</div>
             <div class="orbit-item" onclick="selectItem(this)">تقسیم</div>
         </div>
-    </div>
+    </div> -->
     <div class="graph">
         <svg width="200" height="400" viewbox="000 0 200 400" id="gr">
             <path d="m100,0 a75,75 0 0,1 0,150, a75,75 0 0, 0, 0,150 " stroke="red" fill="none" id="curve" />
