--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#3">تنظیمات</a></li>
                 <li><a href="#4">درباره ما</a></li>
             </ul>
-            <div class="title">مدرسه موش ها</div>
+            <!-- <div class="title">مدرسه موش ها</div> -->
         </div>
 
         <div class="search-bar">
